RESOLVED FIXED286187
[line-clamp] ASSERT in RenderTreeNeedsLayoutChecker when clamped content has floats
https://bugs.webkit.org/show_bug.cgi?id=286187
Summary [line-clamp] ASSERT in RenderTreeNeedsLayoutChecker when clamped content has ...
alan
Reported 2025-01-17 18:58:14 PST
Attachments
[fast-cq]Patch (9.05 KB, patch)
2025-01-17 19:50 PST, alan
koivisto: review+
zalan: commit-queue+
alan
Comment 1 2025-01-17 19:50:05 PST
Created attachment 473938 [details] [fast-cq]Patch
Note You need to log in before you can comment on or make changes to this bug.