[line-clamp] ASSERT in RenderTreeNeedsLayoutChecker when clamped content has floats https://bugs.webkit.org/show_bug.cgi?id=286187

Reviewed by Antti Koivisto.

Make sure discarded renderers (i.e. not laid out during line layout due to line-clamp) get their needsLayout flag cleared.

* LayoutTests/fast/inline/line-clamp-discarded-content-assert-expected.txt: Added.
* LayoutTests/fast/inline/line-clamp-discarded-content-assert.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::lineLayout):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.h:
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::layout):
(WebCore::LayoutIntegration::LineLayout::updateRenderTreePositions):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:

Canonical link: https://commits.webkit.org/289149@main